# sft-concordium

./: Cargo.toml  README.md
concordium-out/: cis-2_schema.json  module-schema.bs64  module.wasm.v1
src/: lib.rs
tests/: tests.rs
