[package]
name = "sft_market"
version = "0.1.0"
authors = [ "e.mousavi <mir.mousavi1118@gmail.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "nothing"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
bump_alloc = ["concordium-std/bump_alloc"]

[dependencies]
concordium-std = {version = "10.0", default-features = false}
concordium-cis2 = {version = "6.1", default-features = false}

[dev-dependencies]
concordium-smart-contract-testing = "4.2"
concordium-std-derive = "6.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
