[package]
name = "sft_market"
version = "0.1.0"
authors = [ "e.mousavi <mir.mousavi1118@gmail.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "nothing"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]

[dependencies]
concordium-std = { version = "*", default-features = false }
concordium-cis2 = { version = "*", default-features = false }
hex = "*"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"